ShuffleBench/kubernetes/shuffle-sparkStructuredStreaming/spark-master-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
    spec:
      containers:
        - name: spark-master
          #image: docker.io/fernandoama/shufflebench-spark-edge:edge
          image: adrianovogel/shufflebench-spark:shuffle-spark
          #image: fernandoama/shufflebench-spark-edge:amd64
          command: ["/spark-master"]
          ports:
            - containerPort: 7077
            - containerPort: 8080
          resources:
            limits:
              memory: 1Gi
              cpu: 300m
        - name: spark-submit
          #image: docker.io/fernandoama/shufflebench-spark-edge:edge
          image: adrianovogel/shufflebench-spark:shuffle-spark
          #image: fernandoama/shufflebench-spark-edge:amd64
          #image: ghcr.io/dynatrace-research/shufflebench/shuffle-spark:latest
          command:
            - bash
            - -c
            - >
              /opt/spark/bin/spark-submit \
                --master spark://spark-master:7077 \
                --deploy-mode client \
                --class com.dynatrace.research.shufflebench.SparkStructuredStreamingShuffle \
                --conf spark.driver.host=$POD_IP \
                --conf spark.driver.bindAddress=$POD_IP \
                --conf spark.executor.memory=$SPARK_EXECUTOR_MEMORY \
                --conf spark.sql.shuffle.partitions=$SPARK_SQL_SHUFFLE_PARTITIONS \
                /shuffle-spark-1.0-SNAPSHOT-all.jar
          ports:
            - containerPort: 4040
          resources:
            limits:
              memory: 1Gi
              cpu: 300m
          volumeMounts:
            - name: shared-data
              mountPath: /tmp/spark/ # to store the checkpoints
        - name: offset-committer
          image: ghcr.io/dynatrace-research/shufflebench/shuffle-spark-offset-committer:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "100m"
          volumeMounts:
            - name: shared-data
              mountPath: /tmp/spark # to access the offsets
      initContainers: #init container to delete older checkpoints
            - name: set-folder-ownership
              image: busybox:1.33.1  # You can use a minimal image like BusyBox for this task
              command: ["/bin/sh", "-c"]
              args: ["mkdir -p /tmp/spark/checkpoint/offsets && chmod -R 777 /tmp/spark/checkpoint"]
              securityContext:
                runAsUser: 0  # Specify the user ID you want to use (0 for root)
      volumes:
        - name: shared-data
          emptyDir: {}
